actually fixed aimbot and esp showing entities that arent there, config stuff

--- a/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj
+++ b/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj
@@ -252,6 +252,7 @@
     <ClInclude Include="Pocket.h" />
     <ClInclude Include="Seven.h" />
     <ClInclude Include="shiv.h" />
+    <ClInclude Include="source2client.h" />
     <ClInclude Include="vindicta.h" />
     <ClInclude Include="Viscous.h" />
     <ClInclude Include="Warden.h" />
