no going back now changing over all config system to new one

--- a/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj
+++ b/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Infernus.cpp" />
+    <ClCompile Include="insttracker.cpp" />
     <ClCompile Include="Ivy.cpp" />
     <ClCompile Include="Kelvin.cpp" />
     <ClCompile Include="kiero\kiero.cpp" />
